# testing-fivetran

./: .gitignore  README.md  app.py  out.db  pyproject.toml
src/testing_fivetran/: __init__.py  args.py  db.py  parse_http.py
