[project]
name = "testing-fivetran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "testcontainers>=4.8.0",
    "sqlalchemy>=2.0.32",
]
[tool.uv]

no-binary-package = true
binary = true
system = false
source = false
editable = true

